WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266926
REGRESSION(
268028@main
): Graphics artifacts when scrolling Heroku app
https://bugs.webkit.org/show_bug.cgi?id=266926
Summary
REGRESSION(268028@main): Graphics artifacts when scrolling Heroku app
Chris B
Reported
2023-12-28 08:31:44 PST
For your information macOS Sonoma Version 14.2.1 (23C71) Safari Version 17.2.1 (19617.1.17.11.12) has reintroduced
bug 220892
that I previously reported and which had been fixed. This is a regression.
Attachments
Screenrecording (272565@main)
(5.23 MB, video/quicktime)
2024-01-02 09:42 PST
,
alan
no flags
Details
Screen video of error behavior
(79.18 MB, video/mp4)
2024-01-04 13:21 PST
,
Chris B
no flags
Details
Partial test reduction
(5.07 KB, text/html)
2024-01-21 22:16 PST
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-12-28 18:08:54 PST
Thank you for the report!
https://webkit-debug.herokuapp.com
is not available currently. Could you please provide steps to reproduce that we can use?
Chris B
Comment 2
2023-12-29 04:04:47 PST
Hello Alexey Please use the URL and login credentials below for testing. Note, that the site will go down automatically if it is not actively being used, so please inform me if you cannot login and I will reactivate it as soon as possible. Thank you for your support. Best regards Chris
https://notefall.herokuapp.com/#main
Username: webkit Password:
Bug266926
Steps for observing the behaviour: 1. Login to the application 2. Select "Interest Profiles" from the navigation menu on the left side of the screen. 3. Select "Test 01" and then press "Edit" 4. Scroll the screen, select various items, execute actions, etc.
Simon Fraser (smfr)
Comment 3
2024-01-02 09:05:49 PST
I am not reproducing this on a build at
272420@main
Alexey Proskuryakov
Comment 4
2024-01-02 09:29:14 PST
I was able to reproduce some missing content (painted white) with built-in Safari on macOS 14.3 beta, M3 MacBook Pro. I haven't seen any other problems though.
Radar WebKit Bug Importer
Comment 5
2024-01-02 09:29:23 PST
<
rdar://problem/120373474
>
alan
Comment 6
2024-01-02 09:42:46 PST
Created
attachment 469261
[details]
Screenrecording (
272565@main
) I am seeing some artifacts on ToT WebKit (
272565@main
) -see screen recording.
Alexey Proskuryakov
Comment 7
2024-01-02 09:45:01 PST
Assuming that you are talking about the table with "Lead Vocals" sometimes not painting, then yes, that's exactly what I observed.
Chris B
Comment 8
2024-01-02 10:49:15 PST
I do not see this behaviour on my: MacBook Pro (Retina, 15-inch, Mid 2015) Processor 2.8 GHz Quad-Core Intel Core i7 Memory 16 GB 1600 MHz DDR3 Graphics Intel Iris Pro 1536 MB macOS Version 12.7.1 (21G920) Safari Version 17.1 (17616.2.9.11.9, 17616) I will have access to my macOS Sonoma Version 14.2.1 (23C71) Safari Version 17.2.1 (19617.1.17.11.12) system tomorrow or on Thursday at the latest and will provide some screen shots.
Chris B
Comment 9
2024-01-04 13:21:47 PST
Created
attachment 469293
[details]
Screen video of error behavior Hello Everyone As promised, here is a screen video showing the behavior on the following system: iMac (Retina 5K, 27-inch, 2020) Processor 3.6 GHz 10-Core Intel Core i9 Memory 64 GB 2667 MHz DDR4 Graphics AMD Radeon Pro 5700 8 GB macOS Sonoma Version 14.2.1 (23C71) Safari Version 17.2.1 (19617.1.17.11.12) I hope that this helps. Best regards Chris
Simon Fraser (smfr)
Comment 10
2024-01-21 22:16:14 PST
Created
attachment 469493
[details]
Partial test reduction Attaching a partial test reduction. There are a couple of things you can do to work around the bug. Remove this weird hack: <div class="v-expand" style="padding-top:1628px"> <div class="v-slot" style="margin-top:-1628px"></div> and remove this zero sized position:fixed: <div style="position:fixed;top:0px;left:0px"></div>
Chris B
Comment 11
2024-01-22 13:00:39 PST
Thank you for the information, however, the "weird hack" that you are referring to comes from somewhere within the Jmix framework that I am using or its dependencies, e.g. Vaadin framework; I have no way to influence or manipulate it as far as I know. I have never seen it before. I will report it to the Jmix team and maybe they will be able to modify it themselves or report it to the other framework owner.
Simon Fraser (smfr)
Comment 12
2024-02-01 21:51:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23724
EWS
Comment 13
2024-02-02 10:33:26 PST
Committed
273999@main
(4b1ca4f3add8): <
https://commits.webkit.org/273999@main
> Reviewed commits have been landed. Closing PR #23724 and removing active labels.
Simon Fraser (smfr)
Comment 14
2024-02-02 11:40:29 PST
I confirmed that the fix works on
https://notefall.herokuapp.com/#main
.
maiken chen
Comment 15
2024-02-20 17:47:29 PST
hi simon does this mr has been released in latest safari? i update my safari to Version 17.3.1 (19617.2.4.11.12), but i still can reproduce this problem.
maiken chen
Comment 16
2024-03-04 03:32:24 PST
hi chris does this mr has been released in latest safari? i update my safari to Version 17.3.1 (19617.2.4.11.12), but i still can reproduce this problem.
Alexey Proskuryakov
Comment 17
2024-03-04 15:55:31 PST
This fix should be included in Safari 17.4 betas, not in 17.3.1.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug